Define max-width on list to avoid overlap with handle

--- a/velge.css
+++ b/velge.css
@@ -26,6 +26,7 @@
   line-height: 1;
   overflow: hidden;
   margin: 0;
+  max-width: 95%;
   padding: 0;
 }
 
